--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
 channel = "stable"
 components = ["rust-src", "rustc"]
-targets = ["thumbv6m-none-eabi"]
+targets = ["thumbv7em-none-eabihf"]
